--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "json-server": "json-server --port 3000 --watch db.json",
+    "test": "concurrently \"npm:json-server\" \"npm run serve\""
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "concurrently": "^5.3.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.4.9",
