--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "concurrently": "^5.3.0",
     "core-js": "^3.6.5",
+    "json-server": "^0.16.3",
     "vue": "^2.6.11",
     "vue-router": "^3.4.9",
     "vue-tree-table-component": "^0.1.1",
